@@ -1,6 +1,8 @@
 SVN version
 
+[ADD] /demote <reason> People need to specify a reason to demote.
 [FIX] Version number in the help screen
+[FIX] Battering ram not working on warranted people
 [CHANGE] /buypistol to /buy because of the custom items
 [remove] The easter egg.
 
